Use code as template

--- a/src/template.html
+++ b/src/template.html
@@ -21,8 +21,7 @@
                   style="margin: 0px; font-size: 18px; color: rgb(33, 31, 31)"
                   class="sc-fBuWsC eeihxG"
                 >
-                  <span>{my_name}</span><span>&nbsp;</span
-                  ><span>{my_last_name}</span>
+                  <span>$name</span><span>&nbsp;</span><span>$last_name</span>
                 </h3>
                 <p
                   color="#211f1f"
@@ -35,7 +34,7 @@
                   "
                   class="sc-fMiknA bxZCMx"
                 >
-                  <span>{my_job_title}</span>
+                  <span>$job_title</span>
                 </p>
                 <table
                   style="font-size: medium; font-family: Arial; width: 100%"
@@ -104,7 +103,7 @@
                       </td>
                       <td style="padding: 0px; color: rgb(33, 31, 31)">
                         <a
-                          href="tel:{my_phone_number}"
+                          href="tel:$phone"
                           color="#211f1f"
                           style="
                             text-decoration: none;
@@ -112,7 +111,7 @@
                             font-size: 12px;
                           "
                           class="sc-gipzik iyhjGb"
-                          ><span>{my_phone_number}</span></a
+                          ><span>$phone</span></a
                         >
                       </td>
                     </tr>
@@ -147,7 +146,7 @@
                       </td>
                       <td style="padding: 0px">
                         <a
-                          href="mailto:{my_email_address}"
+                          href="mailto:$email"
                           color="#211f1f"
                           style="
                             text-decoration: none;
@@ -155,7 +154,7 @@
                             font-size: 12px;
                           "
                           class="sc-gipzik iyhjGb"
-                          ><span>{my_email_address}</span></a
+                          ><span>$email</span></a
                         >
                       </td>
                     </tr>
@@ -190,7 +189,7 @@
                       </td>
                       <td style="padding: 0px">
                         <a
-                          href="{my_website_url}"
+                          href="$website"
                           color="#211f1f"
                           style="
                             text-decoration: none;
@@ -198,7 +197,7 @@
                             font-size: 12px;
                           "
                           class="sc-gipzik iyhjGb"
-                          ><span>{my_website_url}</span></a
+                          ><span>$website</span></a
                         >
                       </td>
                     </tr>
@@ -217,7 +216,7 @@
                     <tr>
                       <td>
                         <img
-                          src="{my_profile_image}"
+                          src="$avatar"
                           role="presentation"
                           class="sc-cHGsZl bHiaRe"
                           style="
@@ -251,7 +250,7 @@
                                 <a
                                   class="sc-hzDkRC kpsoyz"
                                   style="display: inline-block; padding: 0px"
-                                  href="{my_github_account}"
+                                  href="$github_profile"
                                   ><img
                                     class="sc-bRBYWo ccSRck"
                                     style="max-width: 135px; display: block"
@@ -265,7 +264,7 @@
                                 <a
                                   class="sc-hzDkRC kpsoyz"
                                   style="display: inline-block; padding: 0px"
-                                  href="{my_gitlab_account}"
+                                  href="$gitlab_profile"
                                   ><img
                                     class="sc-bRBYWo ccSRck"
                                     style="max-width: 135px; display: block"
@@ -279,7 +278,7 @@
                                 <a
                                   class="sc-hzDkRC kpsoyz"
                                   style="display: inline-block; padding: 0px"
-                                  href="{my_linkedin_account}"
+                                  href="$linkedin_profile"
                                   ><img
                                     class="sc-bRBYWo ccSRck"
                                     style="max-width: 135px; display: block"
